--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 <!---------------------- navbar  ------------------------>
 
-        <nav class="navbar  fixed-top navbar-expand-lg navbar-light bg-transparent">
+        <nav class="navbar  fixed-top navbar-expand-lg navbar-light py-3 bg-transparent">
             <div class="container ">
-              <a class=" ms-auto  lightLogo" href="#"><img src="imges/bakery-light-1.png" class="w-50"></a>
-              <a class=" ms-auto  coloredLogo d-none" href="#"><img src="imges/bakery-color.png" class="w-50"></a>
+              <a class="lightLogo" href="#"><img src="imges/bakery-light-1.png" class="w-50"></a>
+              <a class="coloredLogo d-none" href="#"><img src="imges/bakery-color.png" class="w-50"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -170,7 +170,7 @@
                     </div>
         
                     <div class=" col-md-6">
-                        <iframe  width="550" height="550" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+                        <iframe class="w-100 h-100" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
         
                     </div>
 
