--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         <section class="container py-5">
             <div class="row align-items-center">
 
-                <div class="col-md-6 col-sm-12">
+                <div class="col-lg-6">
                     <img class="img-fluid" src="imges/alexandru-stavrica-170390-800x760.jpg">
                 </div>
 
-                <div class="ps-5 col-md-6 col-sm-12">
+                <div class="ps-5 col-lg-6">
                     <h2 class="mb-4">Who we are?</h2>
                     <p class="text-muted">We have been operating for over 30 years and are Members of The Federation of Master Builders. We work on projects big and small from small residential extensions to full house. We are so happy with this theme. Everyday it make our lives better.</p>
                     <p class="text-muted "> <i class="fab fa-envira whoIcons"></i> We care about environment.</p>
