--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="stylesheet" href="css/index_style.css">
+        <!-- <link rel="stylesheet" href="css/media.css"> -->
     </head>
 
     <body>
