--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 <!---------------------- navbar  ------------------------>
 
-        <nav class="navbar  fixed-top navbar-expand-lg navbar-light py-3 bg-transparent">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light py-3 bg-transparent">
             <div class="container ">
-              <a class="lightLogo" href="#"><img src="imges/bakery-light-1.png" class="w-50"></a>
-              <a class="coloredLogo d-none" href="#"><img src="imges/bakery-color.png" class="w-50"></a>
+              <a class="navbar-brand lightLogo" href="#"><img src="imges/bakery-light-1.png" class="w-50"></a>
+              <a class="navbar-brand coloredLogo d-none" href="#"><img src="imges/bakery-color.png" class="w-50"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -80,7 +80,7 @@
             <div class="row align-items-center">
 
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="imges/alexandru-stavrica-170390-800x760.jpg">
+                    <img class="img-fluid mb-4" src="imges/alexandru-stavrica-170390-800x760.jpg">
                 </div>
 
                 <div class="ps-5 col-lg-6">
@@ -103,7 +103,7 @@
             <div class="container">
                 <div class="row align-items-center">
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 mb-4">
                         <h2 class="">Our Location</h2>
                         <p class="text-muted">We have been operating for over 30 years and are Members of The Federation of Master Builders. We work on projects big and small from small residential extensions to full house. We are so happy with this theme. Everyday it make our lives better.</p>
                         <p class="text-muted">Story on projects big and small from small residential extensions to full house. We are so happy with this theme. Everyday it make our lives better.</p>
@@ -145,7 +145,7 @@
                 <div class="col-lg-4 text-center">
                     <img src="imges/clem-onojeghuo-206832-600x500.jpg" class="img-fluid">
                     <h4 class="py-3">Cookies</h4>
-                    <p class="text-muted">Proin interdum, ante ut sollicitudin commodo, tellus quam sagittis libero, at semper mauris velit a velit. Phasellus commodo turpis et lacinia posuere.</p>
+                    <p class="text-muted">Proin interdum, ante ut sollicitudin commodo,<br> tellus quam sagittis libero, at semper mauris velit a velit.<br> Phasellus commodo turpis et lacinia posuere.</p>
                 </div>
     
             </div>
