--- a/offers.html
+++ b/offers.html
@@ -26,7 +26,7 @@
 
         <nav class="navbar  fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="container ">
-              <a class=" ms-auto  coloredLogo" href="#"><img src="imges/bakery-color.png" class="w-50"></a>
+              <a class="navbar-brand coloredLogo" href="#"><img src="imges/bakery-color.png" class="w-50"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -86,62 +86,62 @@
         <section class="container-fluid p-5">
             <div class="row ">
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Great Service <span class="text-muted">$12</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Beef Delicious<span class="text-muted">$15</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Short Cut<span class="text-muted">$24</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Quick Dig<span class="text-muted">$15</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">King Size<span class="text-muted">$13</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Enormous Bite<span class="text-muted">$15</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Short Stuff<span class="text-muted">$29</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Premium Type<span class="text-muted">$32</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Luxurious Offer<span class="text-muted">$52</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Great Service<span class="text-muted">$15</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Beef Delicious<span class="text-muted">$12</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 mb-4">
                     <p class="d-flex justify-content-between priceLine position-relative pb-2">Short Cut<span class="text-muted">$24</span></p>
                     <p class="text-muted">Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies nisi at scelerisque pellentesque. Nunc feugiat felis vitae.</p>
                 </div>
@@ -158,13 +158,13 @@
         <div class="container-fluid py-5">
             <div class="row">
 
-                <div class="col-md-3">
+                <div class="col-lg-3">
                     <h3 class="text-white mb-4 mb-4">About Us</h3>
                     <p class="text-muted">I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur. I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur.</p>
                     <p class="text-muted">We are the champions! We are the most amazing theme of all time, yeah.</p>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-lg-3">
                     <h3 class="text-white mb-4">Why we are special?</h3>
                     <p class="text-muted line pb-2 line pb-2"> > Our magical recipe.</p>
                     <p class="text-muted line pb-2"> > We care about environment.</p>
@@ -173,7 +173,7 @@
                     <p class="text-muted"> > This list is super easy to create.</p>
                 </div>
     
-                <div class="col-md-3">
+                <div class="col-lg-3">
                     <h3 class="text-white mb-4">Opening Hours</h3>
                     <p class="text-muted line pb-2"> > Monday 10AM - 9PM</p>
                     <p class="text-muted line pb-2"> > Tuesday 10AM - 9PM</p>
@@ -183,7 +183,7 @@
                     <p class="text-muted"> > Weekends 10AM - 11PM</p>
                 </div>
 
-                <div class="col-md-3 mapBG">
+                <div class="col-lg-3 mapBG">
                     <h3 class="text-white mb-4">Contact Details</h3>
                     <p class="text-muted line pb-2">Lorem ipsum dolor sit amet.</p>
                     <br>
