--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="stylesheet" href="css/about_style.css">
+        <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
     </head>
 
     <body>
@@ -23,9 +24,9 @@
         
         <!---------------------- navbar  ------------------------>
 
-        <nav class="navbar  fixed-top navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar shadow-sm fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="container ">
-              <a class="navbar-brand coloredLogo" href="#"><img src="imges/bakery-color.png" class="w-50"></a>
+              <a class="navbar-brand coloredLogo w-25" href="#"><img src="imges/bakery-color.png" class="w-75"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -59,8 +60,8 @@
 <!----------------------about section ------------------------>
 
 
-        <section class="about container-fluid d-flex justify-content-center align-items-center pt-5 mt-5">
-            <div class="text-center text-white">
+        <section class="about container-fluid d-flex justify-content-center align-items-center py-5 mt-5">
+            <div class="text-center text-white py-3">
                 <h2>About</h2>
                 <p>Learn more about us.</p>
             </div>
