--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="stylesheet" href="css/contact_style.css">
         <link rel="stylesheet" href="css/contact_media.css">
-
+        <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
     </head>
 
     <body>
@@ -28,7 +28,7 @@
 
         <nav class="navbar  fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="container ">
-              <a class="navbar-brand coloredLogo" href="#"><img src="imges/bakery-color.png" class="w-50"></a>
+              <a class="navbar-brand coloredLogo w-25" href="#"><img src="imges/bakery-color.png" class="w-75"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -63,10 +63,9 @@
 <!----------------------our offer section ------------------------>
 
 
-<section class="contact container-fluid d-flex justify-content-center align-items-center pt-5 mt-5">
-    <div class="text-center text-white">
+<section class="contact py-5 container-fluid d-flex justify-content-center align-items-center pt-5 mt-5">
+    <div class="text-center text-white py-3">
         <h2>Contact</h2>
-        <br>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item active"><a class="text-decoration-none text-white" href="index.html">Home</a></li>
