--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="stylesheet" href="css/index_style.css">
+        <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
     </head>
 
     <body>
@@ -23,31 +24,31 @@
 <!---------------------- navbar  ------------------------>
 
         <nav class="navbar fixed-top navbar-expand-lg navbar-light py-3 bg-transparent">
-            <div class="container ">
-              <a class="navbar-brand lightLogo" href="#"><img src="imges/bakery-light-1.png" class="w-50"></a>
-              <a class="navbar-brand coloredLogo d-none" href="#"><img src="imges/bakery-color.png" class="w-50"></a>
+            <div class="container">
+              <a class="navbar-brand lightLogo w-25" href="#"><img src="imges/bakery-light-1.png" class="w-75"></a>
+              <a class="navbar-brand coloredLogo w-25 d-none" href="#"><img src="imges/bakery-color.png" class="w-75"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto  mb-lg-0">
                   <li class="nav-item px-2">
-                    <a class="nav-link  text-white fs-5" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link  text-white fs-6" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item px-1">
-                    <a class="nav-link text-white fs-5" href="about.html">About</a>
+                    <a class="nav-link text-white fs-6" href="about.html">About</a>
                   </li>
                   <li class="nav-item px-1">
-                    <a class="nav-link text-white fs-5" href="offers.html">Our offer</a>
+                    <a class="nav-link text-white fs-6" href="offers.html">Our offer</a>
                   </li>
                   <li class="nav-item px-1">
-                    <a class="nav-link text-white fs-5" href="gallery.html">Gallery</a>
+                    <a class="nav-link text-white fs-6" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item px-1">
-                    <a class="nav-link text-white fs-5" href="#">Blog</a>
+                    <a class="nav-link text-white fs-6" href="#">Blog</a>
                   </li>
                   <li class="nav-item px-1">
-                    <a class="nav-link text-white fs-5" href="contact.html">Contact</a>
+                    <a class="nav-link text-white fs-6" href="contact.html">Contact</a>
                   </li>
               </div>
             </div>
